--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="/css/style.css" />
 </head>
 <body>
-	<div class="container">
+    <div class="container-fluid">
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills pull-right">
