--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -17,6 +17,8 @@
     <script src="https://code.highcharts.com/mapdata/countries/in/in-all.js"></script>
     <link rel="stylesheet" href="../public/css/index.css" type="text/css" media="all" />
     <link rel="stylesheet" href="../public/css/totalVotesBarChart.css" type="text/css" media="all" />
+    <!--web3 cdn--> 
+    <script src="https://cdn.rawgit.com/ethereum/web3.js/develop/dist/web3.js"></script>
 
     <div class="row dashboard container-fluid">
       <div class="col-6">
@@ -31,7 +33,7 @@
         </div>
       </div>
     </div>
-    <script src="../public/js/index.js"></script>
-    <script src="../public/js/totalVotesBarChart.js"></script>
+    <script src="../js/index.js"></script>
+    <script src="../js/totalVotesBarChart.js"></script>
   </body>
 </html>
