--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -34,6 +34,7 @@
       </div>
     </div>
     <script src="../js/index.js"></script>
+    <script src="../js/totalVotesMap.js"></script>
     <script src="../js/totalVotesBarChart.js"></script>
   </body>
 </html>
