--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -4,6 +4,9 @@
 	<title>Voteup</title>
 	<link rel="stylesheet" href="/css/bootstrap.css" />
 	<link rel="stylesheet" href="/css/style.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdn.rawgit.com/ethereum/web3.js/develop/dist/web3.js"></script>
+
 </head>
 <body>
     <div class="container-fluid">
@@ -44,5 +47,6 @@
       </div>
 
     </div> <!-- /container -->
+
 </body>
 </html>
