Extract maps and charts to theme template

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,30 +6,128 @@
     <title>Voting Map Demo</title>
   </head>
   <body>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>	<script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.3.15/proj4.js"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/maps/modules/map.js"></script>
     <script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <script src="https://code.highcharts.com/maps/modules/offline-exporting.js"></script>
     <script src="https://code.highcharts.com/mapdata/countries/in/in-all.js"></script>
-    <link rel="stylesheet" href="../public/css/index.css" type="text/css" media="all" />
-    <link rel="stylesheet" href="../public/css/totalVotesBarChart.css" type="text/css" media="all" />
-    <!--web3 cdn--> 
-    <script src="https://cdn.rawgit.com/ethereum/web3.js/develop/dist/web3.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.4.4/proj4.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="../css/index.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="../css/totalVotesBarChart.css" type="text/css" media="all" />
 
-    <div class="row dashboard container-fluid">
-      <div class="col-6">
-        <div id="container"></div>
-      </div>
-      <div class="col-6">
-        <div class="row">
-          <div id="totalVotesBarChart"></div>
-        </div>
-        <div class="row">
-          api news
+    <div class="container-fluid">
+      <div class="row">
+        <!-- partial -->
+        <div class="content-wrapper dashboard">
+          <h3 class="page-heading mb-4">Dashboard</h3>
+          <div class="statistics-row row">
+            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 mb-4">
+              <div class="card card-statistics">
+                <div class="card-body btb btn-primary-outline buy-medicine">
+                  <div class="clearfix">
+                    <div class="float-left">
+                      <h4 class="text-primary">
+                        <i class="fa fa-cart-plus highlight-icon" aria-hidden="true"></i>
+                      </h4>
+                    </div>
+                    <div class="float-right buy-label">
+                      <h4 class="card-text text-primary">
+                        Buy
+                      </h4>
+                      <!-- <button type="button" class="btn btn-outline-primary bold-text card-text">Buy Medicine</button> -->
+                    </div>
+                  </div>
+                  <p class="text-muted">
+                    <i class="fa fa-info-circle mr-1" aria-hidden="true"></i> Buy Medicine From Manufacturer
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 mb-4">
+              <div class="card card-statistics">
+                <div class="card-body">
+                  <div class="clearfix">
+                    <div class="float-left">
+                      <h4 class="text-danger">
+                        <i class="fa fa-bar-chart-o highlight-icon" aria-hidden="true"></i>
+                      </h4>
+                    </div>
+                    <div class="float-right">
+                      <p class="card-text text-dark">Available</p>
+                      <h4 class="bold-text total-sales-val pull-right">29</h4>
+                    </div>
+                  </div>
+                  <p class="text-muted">
+                    <i class="fa fa-info-circle mr-1" aria-hidden="true"></i> Types of Medicines in Stock
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 mb-4">
+              <div class="card card-statistics">
+                <div class="card-body">
+                  <div class="clearfix">
+                    <div class="float-left">
+                      <h4 class="text-warning">
+                        <i class="fa fa-shopping-cart highlight-icon" aria-hidden="true"></i>
+                      </h4>
+                    </div>
+                    <div class="float-right">
+                      <p class="card-text text-dark">Orders</p>
+                      <h4 class="bold-text">656</h4>
+                    </div>
+                  </div>
+                  <p class="text-muted">
+                    <i class="fa fa-info-circle mr-1" aria-hidden="true"></i> Total Orders in the Past 30 Days
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 mb-4">
+              <div class="card card-statistics">
+                <div class="card-body">
+                  <div class="clearfix">
+                    <div class="float-left">
+                      <h4 class="text-success">
+                        <i class="fa fa-dollar highlight-icon" aria-hidden="true"></i>
+                      </h4>
+                    </div>
+                    <div class="float-right">
+                      <p class="card-text text-dark">Revenue</p>
+                      <h4 class="bold-text">$65656</h4>
+                    </div>
+                  </div>
+                  <p class="text-muted">
+                    <i class="fa fa-info-circle mr-1" aria-hidden="true"></i> Total Revenue Generated in the Past 30
+                    Days
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-7 mb-4">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">State Wise Result</h5>
+                  <div class="row">
+                    <div id="container"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-5 mb-4">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Party Wise Result</h5>
+                  <div class="custom-legend-container w-75 mx-auto">
+                    <div id="totalVotesBarChart"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
