--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -15,8 +15,8 @@
       <div class="header clearfix">
         <nav class="navbar navbar-default col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
           <div class="text-center navbar-brand-wrapper">
-            <a class="navbar-brand brand-logo" href="index.html"><img src="images/vote_logo.png" /></a>
-            <a class="navbar-brand brand-logo-mini" href="index.html"><img src="images/vote_logo.png" alt=""></a>
+            <a class="navbar-brand brand-logo" href="index.html"><img src="/images/vote_logo.png" /></a>
+            <a class="navbar-brand brand-logo-mini" href="index.html"><img src="/images/vote_logo.png" alt=""></a>
           </div>
           <div class="navbar-menu-wrapper d-flex align-items-center">
             <button class="navbar-toggler navbar-toggler d-none d-lg-block navbar-dark align-self-center mr-3" type="button" data-toggle="minimize">
@@ -26,28 +26,30 @@
               <!--   <input class="form-control mr-sm-2 search" type="text" placeholder="Search"> -->
               <!-- </form> -->
             <ul class="navbar-nav ml-lg-auto d-flex align-items-center flex-row">
-              <li class="nav-item">
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#"><i class="fa fa-th"></i></a>
-              </li>
+              {{#if user}}
+              <li class="nav-item"><a class="nav-link" href="/">Dashboard</a></li>
+              <li class="nav-item"><a class="nav-link" href="/users/logout">Logout</a></li>
+              {{else}}
+              <li class="nav-item"><a class="nav-link" href="/users/login">Login</a></li>
+              <li class="nav-item"><a class="nav-link" href="/users/register">Register</a></li>
+              {{/if}}
             </ul>
             <button class="navbar-toggler navbar-dark navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
               <span class="navbar-toggler-icon"></span>
             </button>
           </div>
         </nav>
-        <!-- <nav> -->
-          <!--   <ul class="nav nav-pills pull-right"> -->
-            <!--     {{#if user}} -->
-            <!--     <li role="presentation"><a href="/">Dashboard</a></li> -->
-            <!--     <li role="presentation"><a href="/users/logout">Logout</a></li> -->
-            <!--     {{else}} -->
-            <!--     <li role="presentation"><a href="/users/login">Login</a></li> -->
-            <!--     <li role="presentation"><a href="/users/register">Register</a></li> -->
-            <!--     {{/if}} -->
-            <!--   </ul> -->
-          <!-- </nav> -->
+        <nav>
+            <ul class="nav nav-pills pull-right">
+                {{#if user}}
+                <li role="presentation"><a href="/">Dashboard</a></li>
+                <li role="presentation"><a href="/users/logout">Logout</a></li>
+                {{else}}
+                <li role="presentation"><a href="/users/login">Login</a></li>
+                <li role="presentation"><a href="/users/register">Register</a></li>
+                {{/if}}
+              </ul>
+          </nav>
         <!-- <h3 class="text-muted">Voteup</h3> -->
       </div>
 
