Make challenge submit only once

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -86,7 +86,7 @@
             </div>
             <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 mb-4">
               <div class="card card-statistics">
-                <div class="card-body btn-warning-outline buy-medicine" data-toggle="modal" data-target="#challengeModalCenter">
+                <div class="card-body btn-warning-outline buy-medicine challenge-system" data-toggle="modal" data-target="#challengeModalCenter">
                   <div class="clearfix">
                     <div class="float-left">
                       <h4 class="text-warning">
