--- a/views/partials/challenge.handlebars
+++ b/views/partials/challenge.handlebars
@@ -21,7 +21,7 @@
             </div>
           </form>
         </div>
-        <div class="challenge-after" style="display:none">
+        <div class="challenge-after success" style="display:none">
           <div class="card card-statistics">
             <div class="card-body">
               <h4 class="text-success text-center">
@@ -29,6 +29,18 @@
               </h4>
               <h4 class="text-success text-center">
                 Verified
+              </h4>
+            </div>
+          </div>
+        </div>
+        <div class="challenge-after failed" style="display:none">
+          <div class="card card-statistics">
+            <div class="card-body">
+              <h4 class="text-danger text-center">
+                <i class="fa fa-times highlight-icon" aria-hidden="true"></i>
+              </h4>
+              <h4 class="text-danger text-center">
+                Failed
               </h4>
             </div>
           </div>
